data/gcp-easy/codeparrot-large-tf/network-firewall/sample-33/main.tf
terraform {
  required_providers {
    google = {
      source = "hashicorp/google"
    }
  }
}

# google provider block
provider "google" {
}

# create compute network
resource "google_compute_network" "name_0" {
  name = "my-network-${random_suffix}"
  auto_create_subnetworks = "false"
}

# create compute firewall
resource "google_compute_firewall" "name_1" {
  name = "my-firewall-${random_suffix}"
  network = "${google_compute_network.name_0.self_link}"

  allow {
    protocol = "icmp"
  }

  allow {
    protocol = "tcp"
    ports = ["22", "80"]
  }

  allow {
    protocol = "udp"
    ports = ["22", "80"]
  }
}
